versions/26.1.2/develop/blocks/blockstates.md
---
title: Block States
description: Learn why blockstates are a great way to add visual functionality to your blocks.
authors:
  - IMB11
resources:
  https://minecraft.wiki/w/Tutorial:Models#Block_states: Block States - Minecraft Wiki
  https://docs.neoforged.net/docs/blocks/states/: Blockstates - NeoForge Docs
---

A block state is a piece of data attached to a singular block in the Minecraft world containing information on the block in the form of properties - some examples of properties vanilla stores in block states:

- Rotation: Mostly used for logs and other natural blocks.
- Activated: Heavily used in redstone devices, and blocks such as the furnace or smoker.
- Age: Used in crops, plants, saplings, kelp etc.

You can probably see why they are useful - they avoid the need to store NBT data in a block entity - reducing the world size, and preventing TPS issues!

Blockstate definitions are found in the `assets/example-mod/blockstates` folder.

## Example: Pillar Block {#pillar-block}

<!-- Note: This example could be used for a custom recipe types guide, a condensor machine block with a custom "Condensing" recipe? -->

Minecraft has some custom classes already that allow you quickly create certain types of blocks - this example goes through the creation of a block with the `axis` property by creating a "Condensed Oak Log" block.

The vanilla `RotatedPillarBlock` class allows the block to be placed in the X, Y or Z axis.

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/ModBlocks.java#condensed_oak_log

Pillar blocks have two textures, top and side - they use the `block/cube_column` model.

As always, with all block textures, the texture files can be found in `assets/example-mod/textures/block`

<DownloadEntry visualURL="/assets/develop/blocks/blockstates_0_large.png" downloadURL="/assets/develop/blocks/condensed_oak_log_textures.zip">Textures</DownloadEntry>

Since the pillar block has two positions, horizontal and vertical, we'll need to make two separate model files:

- `condensed_oak_log_horizontal.json` which extends the `block/cube_column_horizontal` model.
- `condensed_oak_log.json` which extends the `block/cube_column` model.

An example of the `condensed_oak_log_horizontal.json` file:

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/models/block/condensed_oak_log_horizontal.json

::: info

Remember, blockstate files can be found in the `assets/example-mod/blockstates` folder, the name of the blockstate file should match the block ID used when registering your block in the `ModBlocks` class. For instance, if the block ID is `condensed_oak_log`, the file should be named `condensed_oak_log.json`.

For a more in-depth look at all the modifiers available in the blockstate files, check out the [Minecraft Wiki - Models (Block States)](https://minecraft.wiki/w/Tutorial:Models#Block_states) page.

:::

Next, we need to create a blockstate file, which is where the magic happens. Pillar blocks have three axes, so we'll use specific models for the following situations:

- `axis=x` - When the block is placed along the X axis, we will rotate the model to face the positive X direction.
- `axis=y` - When the block is placed along the Y axis, we will use the normal vertical model.
- `axis=z` - When the block is placed along the Z axis, we will rotate the model to face the positive Z direction.

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/blockstates/condensed_oak_log.json

As always, you'll need to create a translation for your block, and an item model which parents either of the two models.

![Example of Pillar block in-game](/assets/develop/blocks/blockstates_1.png)

## Custom Block States {#custom-block-states}

Custom block states are great if your block has unique properties - sometimes you may find that your block can re-use vanilla properties.

This example will create a unique boolean property called `activated` - when a player right-clicks on the block, the block will go from `activated=false` to `activated=true` - changing its texture accordingly.

### Creating The Property {#creating-the-property}

Firstly, you'll need to create the property itself - since this is a boolean, we'll use the `BooleanProperty.create` method.

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/PrismarineLampBlock.java#block

Next, we have to append the property to the blockstate manager in the `createBlockStateDefinition` method. You'll need to override the method to access the builder:

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/PrismarineLampBlock.java#block_state_definition

You'll also have to set a default state for the `activated` property in the constructor of your custom block.

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/PrismarineLampBlock.java#constructor

### Using The Property {#using-the-property}

This example flips the boolean `activated` property when the player interacts with the block. We can override the `useWithoutItem` method for this:

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/PrismarineLampBlock.java#on_use

### Visualizing The Property {#visualizing-the-property}

Before creating the blockstate file, you will need to provide textures for both the activated and deactivated states of the block, as well as the block model.

<DownloadEntry visualURL="/assets/develop/blocks/blockstates_2_large.png" downloadURL="/assets/develop/blocks/prismarine_lamp_textures.zip">Textures</DownloadEntry>

Use your knowledge of block models to create two models for the block: one for the activated state and one for the deactivated state. Once you've done that, you can begin creating the blockstate file.

Since you created a new property, you will need to update the blockstate file for the block to account for that property.

If you have multiple properties on a block, you'll need to account for all possible combinations. For example, `activated` and `axis` would lead to 6 combinations (two possible values for `activated` and three possible values for `axis`).

Since this block only has two possible variants, as it only has one property (`activated`), the blockstate JSON will look something like this:

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/blockstates/prismarine_lamp.json

::: tip

Don't forget to add a [Client Item](../items/first-item#creating-the-client-item) for the block so that it will show in the inventory!

:::

Since the example block is a lamp, we also need to make it emit light when the `activated` property is true. This can be done through the block settings passed to the constructor when registering the block.

You can use the `lightLevel` method to set the light level emitted by the block, we can create a static method in the `PrismarineLampBlock` class to return the light level based on the `activated` property, and pass it as a method reference to the `lightLevel` method:

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/custom/PrismarineLampBlock.java#get_luminance

<<< @/reference/26.1.2/src/main/java/com/example/docs/block/ModBlocks.java#prismarine_lamp

<!-- Note: This block can be a great starter for a redstone block interactivity page, maybe triggering the blockstate based on redstone input? -->

Once you've completed everything, the final result should look something like the following:

<VideoPlayer src="/assets/develop/blocks/blockstates_3.webm">Prismarine Lamp Block in-game</VideoPlayer>
